9 meg jelenés, jatekView create

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
       <header>
-        <h1>TicTac</h1>
+        <h1>TicTacToe</h1>
       </header>
       <nav></nav>
       <article class="jatekter">
