--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="info.css">
   </head>
 
   <body>
