Info panel, következő kész

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
       <header>
         <h1>TicTacToe</h1>
+        <div class="Jneve">
+
+        </div>
+        
+        <div class="Kijon">
+          <p>Következő:X</p>
+        </div>
       </header>
       <nav></nav>
       <article class="jatekter">
