hibák javitva, majd a felhszanálok elkészitése

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="info.css">
   </head>
 
   <body>
@@ -21,13 +20,13 @@
         </div>
         
         <div class="Kijon">
-          <p>Következő:X</p>
+          <p>Következő:</p>
         </div>
       </header>
       <nav></nav>
       <article class="jatekter">
       </article>
-      <footer>Vinczeffy Gergely</footer>
+      <footer><p>Vinczeffy Gergely</p></footer>
 
   </body>
 </html>
